style.css
html, body {
    overflow-x: hidden;
}
body {
    overflow-y: auto;
    height: 100%;
    margin: 0;
    padding: 0;
    background-color: #FFFFFF;
    font-family: "Roboto", sans-serif !important;
}
header {
    background-color: #D9D9D9;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 100px;
}
nav ul {
    list-style-type: none;
    display: flex;
    gap: 50px;
    font-weight: 300;
    margin-bottom: 0 !important;
}
nav ul li a {
    text-decoration: none;
    color: #000000;
    font-size: 1em;
}
nav ul li a:hover {
    color: #FB7D06;
}
.logo-container {
    display: flex;
    align-items: center;
}
.logo {
    width: 50px;
    height: 50px;
    border-radius: 50%;
}
#presentation-container {
    display: flex;
    justify-content: center;
    margin-top: 20vh;
    margin-bottom: 10vh;
}
#presentation {
    display: flex;
    flex-direction: row;
    width: 50vw;
    align-items: center;
}
#presentation-logo-div {
    width: 25%;
}
#head1 {
    font-weight: 100;
    font-size: 3.5em;
    margin: 0;
    line-height: 1em;
    color: #FB7D06;
}
#head2 {
    font-weight: 700;
    font-size: 5em;
    margin: 0;
    line-height: 1em;
}
#head3{
    font-weight: 700;
    font-size: 4em;
    margin: 0;  
    line-height: 1em;
}
#head4 {
    font-size: 1.5em;
    font-weight: 300;
    font-style: italic;
    margin-top: .5em;
    color: #9D9D9D;
    letter-spacing: .1em;
}
#head5 {
    font-size: 1.5em;
    font-weight: 300;
    font-style: italic;
    margin-top: .5em;
    color: #FB7D06;
    letter-spacing: .1em;
}
#description {
    margin: 0;
}
.down-button-container{
    display: flex;
    justify-content: center;
    margin-block: 3vh;
}
.down-button {
    cursor: pointer;
    opacity: 50%;
    transition: opacity 0.3s ease-in-out;
}
.down-button:hover {
    opacity: 100%;
}
#index {
    display: grid;
    width: 100%;
    height: 100vh;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
}
.box{
    height: 50vh;
    width: 50vw;
    background-color: #D9D9D9;
    display: flex;
    justify-content: center;
    align-items: center;
}
.box:hover {
    background-color: #FFFFFF;
    cursor: pointer;
}
.box-inner-container{
    position: relative;
    display: inline-block;
    text-align: center;
    height: 100%;
    width: 100%;
}
.box-inner-background{
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
}
.box-inner-fade{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    transition: background-color 0.3s ease;
    z-index: 1;
}
.box-inner-fade:hover{
    background-color: rgba(0, 0, 0, 0.3);
}
.box-inner-text:hover ~ .box-inner-fade{
    background-color: rgba(0, 0, 0, 0.3);
}
.box-inner-text{
    position: absolute;
    color: #FFFFFF ;
    font-size: 3em;
    font-weight: 700;
    top: 50%;
    left: 50%;
    width: 100%;
    transform: translate(-50%, -50%);
    z-index: 2;
}
#upButton {
    position: fixed;
    bottom: 20px;
    right: 20px;
    z-index: 1000; /* Asegura que el SVG esté por encima de otros elementos */
    cursor: pointer;
    opacity: 0; /* Inicialmente oculto */
    transition: opacity 0.3s ease-in-out; /* Transición suave de opacidad */
}
#upButton.show {
    opacity: 50%; /* El SVG será completamente visible cuando se aplique esta clase */
    z-index: 1000;
}
#upButton:hover {
    opacity: 100%;
}
.banner-section {
    position: relative;
    display: inline-block;
    width: 100%;
    margin-bottom: 8vh;
    text-align: center;
    z-index: 2;
}
.banner-base {
    display: block;
    width: 100%;
    height: 50vh;
    object-fit: cover; /* Para cubrir el contenedor sin deformar */
}
.banner-fade{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 1;
}
#ccdoc-banner-overlay {
    position: absolute;
    top: 80%;       /* Centrado vertical */
    left: 93%;      /* Centrado horizontal */
    transform: translate(-50%, -50%); /* Para ajustar el centro exacto */
    width: 10%;   /* Tamaño de la imagen que va encima */
    height: auto;
    z-index: 2;
}
.banner-text{
    position: absolute;
    top: 50%;
    left: 50%;
    color: #FFFFFF;
    font-size: 5em;
    font-weight: 700;
    transform: translate(-50%, -50%);
    width: 100%;
    z-index: 2;
}
.title-1-container {
    margin-bottom: 8vh;
    display: flex;
    justify-content: center;
    align-items: center; 
}
.title-1-div {
    height: 18vh;
    display: flex;
    align-items: center;
    justify-content: flex-start;
}
.title-2-container {
    display: inline-block;
    align-items: center;
    width: auto;
    background-color: #2098CC;
    border-radius: 0 35px 35px 0;
}
.title-2-div {
    margin-block: 2vh;
    margin-left: 20vw;
    margin-right: 1.5vw;
}
.title-2-text {
    font-weight: 600; 
    font-size: 2em; 
    font-style: italic; 
    color: #FFFFFF;
}
.title-4 {
    display: flex;
    margin-left: 8vw;
}
.title-4-left {
    font-size: 4em; 
    color: #22A092; 
    font-weight: 600;
}
.title-4-right {
    font-size: 3em; 
    margin-top: 2vh; 
    margin-left: .7vw; 
    font-weight: 600; 
    letter-spacing: 0.01em;
}
.description-section {
    margin-inline: 11vw;
    margin-top: 3vh;
    margin-bottom: 8vh;
    text-align: justify;
}
.description-text {
    font-weight: 300;
    font-size: 1.5em;
}
#ccdoc-idfa-catalog-section{
    display: flex;
    justify-content: space-between;
    width:78vw;
    margin-inline: 11vw;
    margin-bottom: 5vh;
    gap: 2vw;
}
.simple-carousel {
    position: relative;
    width: 100%;
    aspect-ratio: var(--carousel-ratio, 16 / 9);
    overflow: hidden;
    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
}
.simple-carousel-item {
    position: absolute;
    inset: 0;
    opacity: 0;
    transition: opacity 0.6s ease;
}
.simple-carousel-item.active {
    opacity: 1;
}
/* ... */

